<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.ygaps.travelapp.View.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/logoApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/display_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/ptsans_bold"
                android:text="EMAIL / PHONE"
                android:textColor="@android:color/white"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/ed_user"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/ptsans_italic"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="#97989c"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/ptsans_bold"
                android:text="PASSWORD"
                android:textColor="@android:color/white"
                android:textSize="15dp"/>

            <EditText
                android:id="@+id/ed_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/ptsans_italic"
                android:paddingLeft="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="#97989c"
                android:inputType="textPassword"
                android:textSize="20dp"
                android:autofillHints="" />

            <Button
                android:id="@+id/btn_SignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/ptsans_bold"
                android:textColor="#000000"
                android:text="@string/sign_in"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btn_ForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/ptsans_bold"
                    android:paddingLeft="10dp"
                    android:text="@string/forgot_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#FFFFFF">

                </Button>

                <Button
                    android:id="@+id/btn_SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/ptsans_bold"
                    android:paddingRight="10dp"
                    android:text="@string/sign_up"
                    android:textAlignment="viewEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="#FFFFFF"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="OR"
                    android:textColor="#FFFFFF"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/tvText"
                    android:background="#FFFFFF"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tvText"
                    android:background="#FFFFFF"/>
            </RelativeLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_LoginFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>