<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RefreshTourDetail"
    android:background="@drawable/gradient_background"
    tools:context="com.ygaps.travelapp.View.TourDetailActivity">
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/TourNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/ptsans_bold"
                android:textColor="@android:color/white"
                android:textSize="35dp"
                android:gravity="center"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:backgroundTint="#4CAF50"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@android:drawable/ic_menu_upload"
                    />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:backgroundTint="#4CAF50"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:focusable="true"
                    app:srcCompat="@android:drawable/ic_delete"
                    />

            </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/ptsans_bold"
                android:text="@string/detail"
                android:textColor="@android:color/white"
                android:textSize="25dp" />

            <Button
                android:id="@+id/FollowTour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/ptsans_italic"
                android:gravity="right"
                android:text="@string/follow_this_tour"
                android:textAlignment="gravity"
                android:background="@null"
                android:textColor="@android:color/white"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/calendar" />

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:text="From:"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/StartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:text="To"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/EndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/walk" />

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:text="Adults:"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/AdultNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:text="Childrends:"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/ChildrenNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:src="@drawable/price_tag" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:text="Min Cost:"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/MinCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:text="Max Cost:"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/MaxCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="3"
                android:fontFamily="@font/ptsans_bold"
                android:text="@string/stop_points"

                android:textColor="@android:color/white"
                android:textSize="25dp" />
                android:layout_width="wrap_content"
                android:layout_height="190dp">

            <ListView
                android:id="@+id/StopPointListView"
                android:nestedScrollingEnabled="true"
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="17dp"
                android:layout_weight="10"
                android:dividerHeight="3dp"
                android:footerDividersEnabled="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:text="@string/members"
                    android:textColor="@android:color/white"
                    android:textSize="25dp" />

                <Button
                    android:id="@+id/AddMember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_italic"
                    android:gravity="right"
                    android:background="@null"
                    android:text="@string/add_member"
                    android:textColor="@android:color/white"
                    android:textSize="15dp" />
            </LinearLayout>


            <ListView
                android:id="@+id/MemberListView"
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="true"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="17dp"
                android:layout_weight="9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_bold"
                    android:text="@string/comments"
                    android:textColor="@android:color/white"
                    android:textSize="25dp" />
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="17dp"
                    android:id="@+id/PageSettingReview"
                    android:onClick="PageCommentSettingClick"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@android:color/white"
                    android:src="@drawable/ic_settings_black_24dp"
                    android:background="@drawable/rounded_corner"
                    />
                <TextView
                    android:id="@+id/SeeAllComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/ptsans_italic"
                    android:onClick="SendCommentClick"
                    android:gravity="right"
                    android:text="@string/see_all"
                    android:textColor="@android:color/white"
                    android:textSize="15dp" />
            </LinearLayout>

            <ListView
                android:id="@+id/CommentListView"
                android:layout_width="match_parent"
                android:nestedScrollingEnabled="true"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="17dp"
                android:layout_weight="8" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/ptsans_bold"
                android:text="@string/review_prompt"
                android:textColor="@android:color/white"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/ReviewTour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/ptsans_italic"
                android:gravity="right"
                android:text="@string/review_this_tour_click"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:onClick="AllReviewClick"/>

        </LinearLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:gravity="center"
              >
              <RatingBar
                  android:id="@+id/AverageStar"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:progressTint="#FFEB3B"
                  android:layout_gravity="center"
                  android:isIndicator="true"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:layout_marginBottom="10dp"
                  android:fontFamily="@font/ptsans_bold"
                  android:gravity="center"
                  android:id="@+id/AveragePointReview"
                  android:layout_marginLeft="6dp"
                  android:textColor="@android:color/white"
                  android:textSize="30dp" />
          </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:text="Review this tour"
                android:padding="8dp"
                android:layout_marginBottom="45dp"
                android:onClick="AddReviewClick"
                />
        </LinearLayout>
</ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>